2004-09-21  JP Rosevear  <jpr@novell.com>
 
 	Fixes #60904
 	
 	* gui/gnome-cal.c (set_week_start): update the view
 	(get_times_for_views): mimic the work week guessing code exactly
 	for calculating the time range needed instead of hardcoding 5 days
 	(set_working_days): new routine to update the view
 	(working_days_changed_cb): use above when getting config change
 	notification
 	(setup_config): set working days and add notification
	
2004-09-21  JP Rosevear  <jpr@novell.com>
 
 	Fixes #66158
 	
 	* gui/e-cal-model-tasks.c (e_cal_model_tasks_mark_task_complete):
 	notify of change so completion status updates immediately
	
2004-09-21  JP Rosevear  <jpr@novell.com>
 
	Fixes #59194
 	
 	* gui/e-cal-model-calendar.c (get_location): return "" instead of
 	NULL
	
2004-09-21  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #65682
	* gui/itip-utils.c 
	(itip_send_comp): check the static capability before
	booking the deletion.

2004-09-15  JP Rosevear  <jpr@novell.com>
 
 	Fixes #55172
 	
 	* conduits/calendar/calendar-conduit.c (local_record_from_comp):
 	handle -1 (last) for monthly recurrences and check both by_set_pos
 	and by_day since either can indicate this type of recurrence
	
2004-09-20  Tony Tsui <ttsui9@gmail.com>

	Fixes #66174

	* gui/dialogs/meeting-page.c (existing_attendee): fixed memory leak.

2004-09-10   Hannah & Fazlu <hannah_lins@yahoo.co.in>

	Fixes bug #65051

	* calendar/gui/dialogs/task-page.c (task_page_fill_component):
	Compared the dates and time

2004-09-10  Rodrigo Moya <rodrigo@novell.com>

	Fixes #62374

	* gui/alarm-notify/alarm-queue.c (load_missed_alarms): removed this
	function.
	(cal_opened_cb): no need to call load_missed_alarms,
	load_alarms_for_today will do everything.
	(alarm_queue_add_client): ditto.
	(load_alarms_for_today): take into account the last saved notification
	time.
	(load_alarms): unref the previous query, this function should now
	only be called once per time range.
